--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -575,7 +575,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Aakash -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">🏴‍☠️ Team Aakash Singh</h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="../../assets/teams/terminators_emblem.png" 
+        alt="Terminators Emblem"
+        class="w-20 h-20 object-contain"
+      />
+      Terminators
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Aakash Singh ©️</p>
@@ -612,7 +619,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Ankit -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">🔥 Team Ankit Aich</h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="../../assets/teams/inferno_fc_emblem.png" 
+        alt="Inferno FC Emblem"
+        class="w-20 h-20 object-contain"
+      />
+      Inferno FC
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Ankit Aich ©️</p>
@@ -649,7 +663,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Dipanjan -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">⚡ Team Dipanjan Majumder</h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="../../assets/teams/black_bulls_emplem.png" 
+        alt="Black Bulls Emblem"
+        class="w-20 h-20 object-contain"
+      />
+      Black Bulls
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Dipanjan Majumder ©️</p>
@@ -730,7 +751,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Subhamoy Das -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">🧠 Team Subhamoy</h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="../../assets/teams/blue_sparks_emblem.png" 
+        alt="Blue Sparks Emblem"
+        class="w-20 h-20 object-contain"
+      />
+      Blue Sparks
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Subhamoy Das ©️</p>
@@ -767,7 +795,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Thomas Joseph -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">🧠 Team Thomas </h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="../../assets/teams/5_madmen_emblem.png" 
+        alt="Five Madmen Emblem"
+        class="w-20 h-20 object-contain"
+      />
+      Five Madmen
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Thomas Joseph ©️</p>
@@ -804,7 +839,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Yash Agarwal -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">🧠 Team Yash </h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="../../assets/teams/yellow_lions_emblem.png" 
+        alt="Yellow Lions Emblem"
+        class="w-20 h-20 object-contain"
+      />
+      Yellow Lions
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Yash Agarwal ©️</p>
