--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -918,14 +918,15 @@ section[data-tab].active{display:block}
 </section>
 
 <!-- Fixtures -->
-  
-<section data-tab="fixtures">
-  <div class="space-y-12">
+<section data-tab="fixtures" class="w-full">
+  <div class="max-w-6xl mx-auto px-4 space-y-12">
 
     <!-- Header -->
     <div class="text-center">
       <h3 class="text-4xl font-black text-emerald-800 mb-2">📅 Match Fixtures</h3>
-      <p class="text-emerald-700 font-semibold">League Stage — All teams play each other once</p>
+      <p class="text-emerald-700 font-semibold">
+        League Stage — All teams play each other once
+      </p>
     </div>
 
     <!-- ROUND 1 -->
