--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -757,7 +757,7 @@ section[data-tab]{
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
     <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
       <img 
-        src="../../assets/teams/black_bulls_emplem.png" 
+        src="../../assets/teams/black_bulls_emblem.png" 
         alt="Black Bulls Emblem"
         class="w-20 h-20 object-contain"
       />
@@ -994,7 +994,7 @@ section[data-tab]{
         <div class="match-card">
           <span class="match-meta">M1 · Pitch A</span>
           <div class="teams">
-            <div class="team"><img src="../../assets/teams/five_madmen_emblem.png"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/five_"><span>Five Madmen</span></div>
             <span class="vs">VS</span>
             <div class="team"><img src="../../assets/teams/black_bulls_emblem.png"><span>Black Bulls</span></div>
           </div>
@@ -1028,7 +1028,7 @@ section[data-tab]{
           <div class="teams">
             <div class="team"><img src="../../assets/teams/yellow_lions_emblem.png"><span>Yellow Lions</span></div>
             <span class="vs">VS</span>
-            <div class="team"><img src="../../assets/teams/five_madmen_emblem.png"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/5_madmen_emblem.png"><span>Five Madmen</span></div>
           </div>
         </div>
       </div>
@@ -1074,7 +1074,7 @@ section[data-tab]{
         <div class="match-card">
           <span class="match-meta">M8 · Pitch B</span>
           <div class="teams">
-            <div class="team"><img src="../../assets/teams/five_madmen_emblem.png"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/5_madmen_emblem.png"><span>Five Madmen</span></div>
             <span class="vs">VS</span>
             <div class="team"><img src="../../assets/teams/blue_sparks_emblem.png"><span>Blue Sparks</span></div>
           </div>
@@ -1114,7 +1114,7 @@ section[data-tab]{
         <div class="match-card">
           <span class="match-meta">M11 · Pitch A</span>
           <div class="teams">
-            <div class="team"><img src="../../assets/teams/five_madmen_emblem.png"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/5_madmen_emblem.png"><span>Five Madmen</span></div>
             <span class="vs">VS</span>
             <div class="team"><img src="../../assets/teams/frost_five_emblem.png"><span>Frost Five</span></div>
           </div>
@@ -1162,7 +1162,7 @@ section[data-tab]{
         <div class="match-card">
           <span class="match-meta">M15 · Pitch A</span>
           <div class="teams">
-            <div class="team"><img src="../../assets/teams/five_madmen_emblem.png"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/5_madmen_emblem.png"><span>Five Madmen</span></div>
             <span class="vs">VS</span>
             <div class="team"><img src="../../assets/teams/inferno_fc_emblem.png"><span>Inferno FC</span></div>
           </div>
@@ -1186,7 +1186,7 @@ section[data-tab]{
         <div class="match-card">
           <span class="match-meta">M17 · Pitch A</span>
           <div class="teams">
-            <div class="team"><img src="../../assets/teams/five_madmen_emblem.png"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/5_madmen_emblem.png"><span>Five Madmen</span></div>
             <span class="vs">VS</span>
             <div class="team"><img src="../../assets/teams/terminators_emblem.png"><span>Terminators</span></div>
           </div>
