--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -994,7 +994,7 @@ section[data-tab]{
         <div class="match-card">
           <span class="match-meta">M1 · Pitch A</span>
           <div class="teams">
-            <div class="team"><img src="../../assets/teams/five_"><span>Five Madmen</span></div>
+            <div class="team"><img src="../../assets/teams/5_madmen_emblem.png"><span>Five Madmen</span></div>
             <span class="vs">VS</span>
             <div class="team"><img src="../../assets/teams/black_bulls_emblem.png"><span>Black Bulls</span></div>
           </div>
