--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -933,7 +933,7 @@
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
     <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
       <img 
-        src="../../assets/teams/" 
+        src="../../assets/teams/5_madmen_emblem.png" 
         alt="Five Madmen Emblem"
         class="w-20 h-20 object-contain"
       />
