--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -1326,7 +1326,7 @@
     </div>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-      <img src="../winter-carnival-cup-2026/exports/trophy1.jpg"
+      <img src="../winter-carnival-cup-2026/exports/picture (1 of 1).jpg"
            class="rounded-2xl shadow-xl hover:scale-105 transition" />
 
       <img src="../../assets/gallery/trophy2.jpg"
