--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -1288,14 +1288,105 @@
 
   </div>
 </section>
+
+  <section data-tab="results" class="space-y-16">
+
+  <!-- Header -->
+  <div class="text-center">
+    <h3 class="text-4xl font-black text-amber-800 mb-2">🏆 Final League Standings</h3>
+    <p class="text-amber-700 font-semibold">
+      Winter Carnival Tournament 2026 — League Results
+    </p>
+  </div>
+
+  <!-- Standings Table -->
+  <div class="overflow-x-auto bg-white rounded-3xl shadow-2xl border border-amber-200">
+    <table class="min-w-full text-center">
+      <thead class="bg-gradient-to-r from-amber-400 to-amber-500 text-white">
+        <tr>
+          <th class="py-4 px-4 font-black">Pos</th>
+          <th class="py-4 px-4 font-black text-left">Team</th>
+          <th class="py-4 px-4 font-black">P</th>
+          <th class="py-4 px-4 font-black">W</th>
+          <th class="py-4 px-4 font-black">D</th>
+          <th class="py-4 px-4 font-black">L</th>
+          <th class="py-4 px-4 font-black">GF</th>
+          <th class="py-4 px-4 font-black">GA</th>
+          <th class="py-4 px-4 font-black">GD</th>
+          <th class="py-4 px-4 font-black">Pts</th>
+        </tr>
+      </thead>
+      <tbody class="divide-y font-semibold">
+
+        <tr class="bg-yellow-50">
+          <td class="py-3">1</td>
+          <td class="py-3 text-left font-black">🥇 Terminators</td>
+          <td>6</td><td>4</td><td>2</td><td>0</td>
+          <td>14</td><td>6</td><td class="text-emerald-700">+8</td>
+          <td class="font-black text-amber-800">14</td>
+        </tr>
+
+        <tr class="bg-slate-50">
+          <td class="py-3">2</td>
+          <td class="py-3 text-left font-black">🥈 Five Madmen</td>
+          <td>6</td><td>3</td><td>3</td><td>0</td>
+          <td>7</td><td>1</td><td class="text-emerald-700">+6</td>
+          <td class="font-black">12</td>
+        </tr>
+
+        <tr>
+          <td class="py-3">3</td>
+          <td class="py-3 text-left font-black">🥉 Yellow Lions</td>
+          <td>6</td><td>3</td><td>0</td><td>3</td>
+          <td>6</td><td>5</td><td class="text-emerald-700">+1</td>
+          <td class="font-black">9</td>
+        </tr>
+
+        <tr>
+          <td class="py-3">4</td>
+          <td class="py-3 text-left">Inferno FC</td>
+          <td>6</td><td>2</td><td>2</td><td>2</td>
+          <td>6</td><td>6</td><td class="text-slate-600">0</td>
+          <td class="font-black">8</td>
+        </tr>
+
+        <tr>
+          <td class="py-3">5</td>
+          <td class="py-3 text-left">Black Bulls</td>
+          <td>6</td><td>1</td><td>2</td><td>3</td>
+          <td>4</td><td>6</td><td class="text-red-600">-2</td>
+          <td class="font-black">5</td>
+        </tr>
+
+        <tr>
+          <td class="py-3">6</td>
+          <td class="py-3 text-left">Blue Sparks</td>
+          <td>6</td><td>1</td><td>2</td><td>3</td>
+          <td>3</td><td>7</td><td class="text-red-600">-4</td>
+          <td class="font-black">5</td>
+        </tr>
+
+        <tr>
+          <td class="py-3">7</td>
+          <td class="py-3 text-left">Frost Five</td>
+          <td>6</td><td>0</td><td>3</td><td>3</td>
+          <td>3</td><td>12</td><td class="text-red-700">-9</td>
+          <td class="font-black">3</td>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
+
+  <!-- Footer Note -->
+  <div class="text-center text-slate-600 font-semibold">
+    Top 3 teams receive trophies & medals 🏆
+  </div>
+
+</section>
+
   
 <!-- ================= COMING SOON SECTIONS (Enhanced) ================= -->
-
-<section data-tab="results">
-  <div class="bg-gradient-to-br from-amber-50 to-amber-100 rounded-3xl shadow-2xl p-16 text-center border border-amber-200/50 coming-soon min-h-[400px]">
-    <div><div class="text-7xl mb-8">🏆</div><h3 class="text-4xl font-black text-amber-800 mb-2">Results</h3><p class="text-2xl text-amber-700 font-bold">Coming Soon</p></div>
-  </div>
-</section>
 
 <section data-tab="stats">
   <div class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-3xl shadow-2xl p-16 text-center border border-purple-200/50 coming-soon min-h-[400px]">
