--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -1385,14 +1385,100 @@
 
 </section>
 
-  
-<!-- ================= COMING SOON SECTIONS (Enhanced) ================= -->
+<section data-tab="stats" class="space-y-20">
 
-<section data-tab="stats">
-  <div class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-3xl shadow-2xl p-16 text-center border border-purple-200/50 coming-soon min-h-[400px]">
-    <div><div class="text-7xl mb-8">📊</div><h3 class="text-4xl font-black text-purple-800 mb-2">Stats</h3><p class="text-2xl text-purple-700 font-bold">Coming Soon</p></div>
+  <!-- Header -->
+  <div class="text-center">
+    <h3 class="text-4xl font-black text-purple-800 mb-2">📊 Tournament Stats</h3>
+    <p class="text-purple-700 font-semibold">
+      Winter Carnival Tournament 2026 — Player Performance
+    </p>
   </div>
+
+  <!-- STATS GRID -->
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-10">
+
+    <!-- GOALS -->
+    <div class="bg-white rounded-3xl shadow-2xl border border-purple-200 overflow-hidden">
+      <div class="bg-gradient-to-r from-emerald-500 to-emerald-600 text-white px-8 py-5">
+        <h4 class="text-2xl font-black">⚽ Goals</h4>
+      </div>
+      <ul class="divide-y font-semibold">
+        <li class="flex justify-between px-8 py-4 bg-emerald-50 font-black">
+          <span>🥇 Vasu</span><span>7</span>
+        </li>
+        <li class="flex justify-between px-8 py-4"><span>Aman</span><span>5</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Arjo</span><span>5</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Kaustav</span><span>3</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Supratim</span><span>3</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Prashnik</span><span>3</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Ritam</span><span>3</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Hrishi</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Arnab</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Akash</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Soumik</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Shubhayan</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>China</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Subhajit</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Roni</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Akash Jr</span><span>1</span></li>
+      </ul>
+    </div>
+
+    <!-- ASSISTS -->
+    <div class="bg-white rounded-3xl shadow-2xl border border-purple-200 overflow-hidden">
+      <div class="bg-gradient-to-r from-sky-500 to-sky-600 text-white px-8 py-5">
+        <h4 class="text-2xl font-black">🎯 Assists</h4>
+      </div>
+      <ul class="divide-y font-semibold">
+        <li class="flex justify-between px-8 py-4 bg-sky-50 font-black">
+          <span>🥇 Vasu</span><span>5</span>
+        </li>
+        <li class="flex justify-between px-8 py-4"><span>Hrishi</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Aman</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Arko</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Arnab</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Rahul</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>China</span><span>2</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Prashnik</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Shubhayan</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Yash</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Akash</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Sankha</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Monty</span><span>1</span></li>
+      </ul>
+    </div>
+
+    <!-- YELLOW CARDS -->
+    <div class="bg-white rounded-3xl shadow-2xl border border-purple-200 overflow-hidden">
+      <div class="bg-gradient-to-r from-amber-500 to-amber-600 text-white px-8 py-5">
+        <h4 class="text-2xl font-black">🟨 Yellow Cards</h4>
+      </div>
+      <ul class="divide-y font-semibold">
+        <li class="flex justify-between px-8 py-4 bg-amber-50 font-black">
+          <span>Arjo</span><span>2</span>
+        </li>
+        <li class="flex justify-between px-8 py-4"><span>Monty</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Prashnik</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Satyaki</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Aman</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Akash</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Arnab</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>China</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Mainak</span><span>1</span></li>
+        <li class="flex justify-between px-8 py-4"><span>Sankha</span><span>1</span></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Footer -->
+  <div class="text-center text-slate-600 font-semibold">
+    Stats updated after completion of all league matches
+  </div>
+
 </section>
+
 
 <section data-tab="gallery">
   <!-- COMING SOON -->
