--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -1479,31 +1479,16 @@
 
 </section>
 
-
-<section data-tab="gallery">
-  <!-- COMING SOON -->
-  <div id="gallery-coming-soon"
-    class="bg-gradient-to-br from-rose-50 to-rose-100 rounded-3xl shadow-2xl p-16 text-center border border-rose-200/50 min-h-[400px] flex items-center justify-center">
-    <div>
-      <div class="text-7xl mb-8">📸</div>
-      <h3 class="text-4xl font-black text-rose-800 mb-2">Gallery</h3>
-      <p class="text-2xl text-rose-700 font-bold">
-        Trophy Reveal on <br>
-        <span class="text-rose-900">18 Jan 2026 · 9:10 AM</span>
-      </p>
-    </div>
-  </div>
-
 <section data-tab="gallery">
 
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-    <img src="../../assets/gallery/trophy1.jpg"
+    <img src="../../tournaments/winter-carnival-sup-2026/exports/trophy1.jpg"
          class="rounded-2xl shadow-xl hover:scale-105 transition" />
 
-    <img src="../../assets/gallery/trophy2.jpg"
+    <img src="../../tournaments/winter-carnival-sup-2026/exports/trophy2.jpg"
          class="rounded-2xl shadow-xl hover:scale-105 transition" />
 
-    <img src="../../assets/gallery/trophy3.jpg"
+    <img src="../../tournaments/winter-carnival-sup-2026/exports/trophy3.jpg"
          class="rounded-2xl shadow-xl hover:scale-105 transition" />
   </div>
 
