--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -1482,13 +1482,13 @@
 <section data-tab="gallery">
 
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-    <img src="./tournaments/winter-carnival-sup-2026/exports/trophy1.jpg"
+    <img src="exports/trophy1.jpg"
          class="rounded-2xl shadow-xl hover:scale-105 transition" />
 
-    <img src="../tournaments/winter-carnival-sup-2026/exports/trophy2.jpg"
+    <img src="exports/trophy2.jpg"
          class="rounded-2xl shadow-xl hover:scale-105 transition" />
 
-    <img src="./tournaments/winter-carnival-sup-2026/exports/trophy3.jpg"
+    <img src="exports/trophy3.jpg"
          class="rounded-2xl shadow-xl hover:scale-105 transition" />
   </div>
 
