--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -1480,18 +1480,9 @@
 </section>
 
 <section data-tab="gallery">
-
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-    <img src="exports/picture (1 of 41).jpg"
-         class="rounded-2xl shadow-xl hover:scale-105 transition" />
-
-    <img src="exports/picture (2 of 41).jpg"
-         class="rounded-2xl shadow-xl hover:scale-105 transition" />
-
-    <img src="exports/picture (3 of 41).jpg"
-         class="rounded-2xl shadow-xl hover:scale-105 transition" />
+  <div id="gallery-grid"
+       class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
   </div>
-
 </section>
 
 </main>
